--- a/mainCss.css
+++ b/mainCss.css
@@ -4,6 +4,9 @@ body {
 }
 
 #inputs_wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -20,11 +23,16 @@ body {
 }
 
 #input_buttons {
+  width: auto;
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
   bottom: 60px;
 	display: inline-flex;
+}
+
+.input_buttons_item {
+  width: 200px;
+  height: 60px;
+  margin: 25px;
 }
 
 .input_comment {
