--- a/mainCss.css
+++ b/mainCss.css
@@ -1,53 +1,222 @@
 
+/* MAIN CONFIGURACION FOR THE POSITIONING AND MAIN BACKGROUND LINEAR GRADIENT */
+
 body {
 	background: linear-gradient(270deg , #db624f, #b05f6e);
 }
 
+/* MAIN WRAPPER */
+
+#user_downloading_path {
+  width: 100%;
+  height: 30px;
+  border-radius: 25px;
+  background: #fbbe53;
+  border-bottom: 4px solid #462445;
+  border-right: 2px solid #462445;
+  text-align: center;
+  font-size: 18pt;
+  user-select: none;
+}
+
+/* ELEMENTOS OF MAIN WRAPPER THAT NEED TO BE SET UP IN POSITION */
+
 #inputs_wrapper {
+  display: grid;
   position: absolute;
   left: 0;
   top: 0;
-	display: flex;
+	grid-template-rows: 25px 15% 8% 8% 8% 8% 8% 5% 40px 40px auto 10px;
+  grid-template-columns: 25px auto 25px;
 	align-items: center;
 	justify-content: center;
 	width: 100%;
 	height: 100%;
 }
 
-.input-div {
-	padding: 20px;
+#title {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 2;
 }
 
-#images_amount {
-	width: 100%;
+#subtitle {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 3; 
+}
+
+#first_input {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: span 1; 
+  margin: 2px;
+}
+
+#second_input {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 5;
+  grid-row-end: span 1; 
+  margin: 2px;
+}
+
+#res_selection {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 6;
+  grid-row-end: span 1; 
+  margin: 2px;
+  background-color: white;
+  height: 60%;
+}
+
+#third_input {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 7;
+  grid-row-end: span 1; 
+  margin: 2px;
+}
+
+#fourth_input {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 8;
+  grid-row-end: span 1; 
+  margin: 5px;
+}
+
+#fifth_input {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 9;
+  grid-row-end: span 1; 
+  margin: 5px;
+}
+
+#progress {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 10;
+  grid-row-end: span 1;  
+  margin-top: 40px;
+  background-color: #ddd;
 }
 
 #input_buttons {
-  width: auto;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 11;
+  grid-row-end: span 1;  
+  margin: 10px;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 40% 20% 40%;
+}
+
+/* GRID FOR BUTTONS */
+
+#button_set {
+  grid-row-start: 1;
+  grid-row-end: span 1;
+  grid-column-start: 1;
+  grid-column-end: span 1;
+}
+
+#button_start_stop {
+  grid-row-start: 1;
+  grid-row-end: span 1;
+  grid-column-start: 3;
+  grid-column-end: span 1;
+}
+
+/* STYLING FOR THE WARNING DIVS */
+
+.warning {
   position: absolute;
-  bottom: 60px;
-	display: inline-flex;
+  z-index: -99;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: 150px;
+  width: 320px;
+  background: #ffcc00;
+  border: 1px solid gray;
+  display: grid;
+  grid-template-rows: 5px 30px 15px auto 30px;
+  grid-template-columns: 5px 40px auto 40px 5px;
 }
 
-.input_buttons_item {
-  width: 200px;
-  height: 60px;
-  margin: 25px;
+.warning_button {
+  grid-row-start: 2;
+  grid-row-end: span 1;
+  grid-column-start: 4;
+  grid-column-end: span 1;
+  padding: 0;
+  margin: 0;
+  width: 40px;
+  height: 30px;
+  background-color: #cc3300;
+  color: black;
+  font-weight: bold;
+  text-align: center;  
+  border-radius: 40%;
+  border: 1px solid gray;
 }
 
-.input_comment {
-  font-size: 15pt;
+.warning_comment {
+  text-align: center;
+  font-weight: bold;
+  grid-row-start: 4;
+  grid-row-end: span 1;
+  grid-column-start: 3;
+  grid-column-end: span 1;
 }
+
+#user_key_warning {
+  opacity: 0;
+}
+
+#user_keyword_warning {
+  opacity: 0;
+}
+
+/* STYLING FOR SELECT TAG */
+
+select {
+  font-size: 16pt;
+  text-align: center;
+}
+
+option {
+  font-size: 16pt;
+}
+
+/* STYLING FOR THE CREATOR STAMP */ 
 
 #creatorStamp {
   position: absolute;
-  left: 1px;
-  bottom: 1px;
+  right: 1px;
+  top: 1px;
   font-size: 10px;
 }
 
+/* STYLING FOR THE PROGRESS BAR */ 
+
+#progress_bar {
+  width: 1%;
+  height: 30px;
+  background-color: #4CAF50;
+}
+
+/* STYLING FOR THE BUTTONS */ 
+
 button {
-	background-color: #47b39c; /* Green */
+	background-color: #47b39c; 
 	border: none;
 	color: white;
   height: auto;
@@ -60,17 +229,21 @@ button {
 	font-size: 15px;
 }
 
-/* styling for the input text */
+
+/* STYLING FOR THE INPUT TEXT */
+
 input[type=text] {
 	width: 100%;
 	border: none;
 	border-bottom: 4px solid #462445;
 	height: 30px;
 	font-size: 20pt;
-	background: #d9d9d9;
+	background: #ffffff;
 }
 
-/* styling for the input range */
+
+/* STYLING FOR THE INPUT RANGE */
+
 input[type=range] {
   height: 32px;
   -webkit-appearance: none;
